<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_"
        android:textAlignment="center"
        android:textSize="40sp"
        android:gravity="center">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motto"
        android:textAlignment="center"
        android:textSize="15sp"
        android:gravity="center">
    </TextView>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="250dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/genPass"
            android:hint="@string/gen_password"
            android:textColor="@color/black"
            android:background="#D9FFFFFF"
            android:padding="30dp"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
        <Button
            android:layout_width="200dp"
            android:id="@+id/generate"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/generate">
        </Button>
        <Button
            android:layout_width="200dp"
            android:layout_marginTop="20dp"
            android:id="@+id/exit"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exit">
        </Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trademark"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="15dp">
            </TextView>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>