<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_"
        android:textAlignment="center"
        android:textSize="40sp"
        android:gravity="center">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/motto"
        android:textAlignment="center"
        android:textSize="15sp"
        android:gravity="center">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textSize="400sp"
            android:gravity="center">
        </TextView>

        <Button
            android:id="@+id/Clicker"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="ENTER"
            android:layout_gravity="center">
        </Button>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trademark"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="15dp">
        </TextView>
    </LinearLayout>

  </androidx.appcompat.widget.LinearLayoutCompat>